...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/report_container"

    tools:context=".ui.report.ReportFragment">

    <LinearLayout
        android:id="@+id/report_top"
        android:background="@drawable/report_top"
        android:layout_width="match_parent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Report a disaster"
            android:layout_marginStart="8dp"
            android:textSize="28dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="this report will be sibmuit to Garda"
            android:layout_marginStart="8dp"
            android:textSize="16dp"
...

    <LinearLayout
        android:id="@+id/report_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_where">

        <TextView
...
            android:textSize="20dp" />
        <RadioGroup
            android:id="@+id/report_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
                android:layout_width="65dp"
                android:layout_height="45dp"
                android:text="Fire"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:background="@drawable/report_fire"/>
            <RadioButton
                android:id="@+id/report_water"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:text="Water"

                />
...
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:text="Other"

                />
...
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/report_other"/>
        </RadioGroup>

...
            android:layout_marginTop="2dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="Where is the disaster:"
            android:textColor="@color/black"
            android:textSize="20dp" />
...
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alibaba_light"
            android:text="mark from the map"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <ImageView
            android:id="@+id/report_mark_map_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
...
            android:layout_marginTop="2dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="How many people injured:"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/report_injured"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...
            android:layout_marginTop="2dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="Updated information"
            android:textColor="@color/black"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/report_otherinfo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
...
    <LinearLayout
        android:background="#ffffff"
        android:id="@+id/report_btn"
        android:layout_width="365dp"
        android:layout_height="150dp"
...
        app:layout_constraintTop_toBottomOf="@+id/report_other">
        <ImageView
            android:id="@+id/report_cancel"
            android:layout_width="107dp"
            android:layout_height="43dp"
...
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/report_submit"
            android:layout_width="107dp"
            android:layout_height="43dp"
...
