<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/report_map"
    tools:context=".ui.report.ReportFragment">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/R_map"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/reportMap_cancel"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/report_cancel"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/R_map" />

    <ImageView
        android:id="@+id/reportMap_submit"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/report_submit"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/R_map" />

    <LinearLayout
        android:id="@+id/radius_dialog"
        android:layout_width="40dp"
        android:layout_height="250dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/rounded_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipChildren="true"
        android:orientation="vertical">


        <SeekBar
            android:id="@+id/mSeekBar"
            android:layout_width="220dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:rotation="-90"
            android:max="200"
            android:min="5"
            android:progress="100"/>

        <TextView
            android:id="@+id/radius_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:fontFamily="@font/alibaba_regular"
            android:text="Radius"
            android:textSize="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="250dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginTop="188dp"-->
<!--        android:background="@drawable/rounded_text"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:orientation="vertical">-->

<!--        <ImageButton-->
<!--            android:id="@+id/fire_btn"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="27dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginLeft="4dp"-->
<!--            android:background="@drawable/fire_logo"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"/>-->

<!--        <TextView-->
<!--            android:id="@+id/fire_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="Fire"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/fire_btn"-->
<!--            android:textSize="10dp"-->
<!--            android:fontFamily="@font/alibaba_regular"/>-->

<!--        <ImageButton-->
<!--            android:id="@+id/water_btn"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:layout_marginLeft="4dp"-->
<!--            android:background="@drawable/water_logo"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/fire_text"/>-->

<!--        <TextView-->
<!--            android:id="@+id/water_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="Water"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/water_btn"-->
<!--            android:textSize="10dp"-->
<!--            android:fontFamily="@font/alibaba_regular"/>-->

<!--        <ImageButton-->
<!--            android:id="@+id/other_btn"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:layout_marginLeft="4dp"-->
<!--            android:background="@drawable/other_logo"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/water_text"/>-->

<!--        <TextView-->
<!--            android:id="@+id/other_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="Other"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/other_btn"-->
<!--            android:textSize="10dp"-->
<!--            android:fontFamily="@font/alibaba_regular"/>-->

<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>
