...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="Report submit successfully"
            android:textColor="@color/red_define"
            android:textSize="24dp" />
        <ImageView
            android:id="@+id/report_submit_back"
            android:layout_width="220dp"
            android:layout_height="55dp"
...
