...
    android:background="@drawable/popup_window_bg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <TextView
        android:id="@+id/tv_pop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Disaster in Dublin"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/closebutton"
        android:layout_alignParentRight="true"/>
...
